Fix z-index

--- a/src/sass/ctf.scss
+++ b/src/sass/ctf.scss
@@ -572,6 +572,7 @@ body.compete
 {
   margin: 0;
   box-shadow: none;
+  z-index: 1;
 }
 .navbar .container-fluid
 {
